message graph and UI changes

--- a/d3-demo.html
+++ b/d3-demo.html
@@ -12,7 +12,8 @@
     <script src="js/network.js"></script>
     <script src="js/chord.js"></script>
     
-    <link rel="stylesheet" href="d3.css">
+    <link rel="stylesheet" href="css/d3.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     
   </head>
   <body>
@@ -26,20 +27,6 @@
           <div class="monitor-label">Backend connection status</div>
           <div class="monitor-indicator" id="backend-ok"></div>
           <div class="monitor-indicator" id="backend-nok"></div>
-          <div class="action-btn-wrapper">
-              <button class="action-btn inline" id="power"><img width="30" src="./img/power.png"/></button>
-              <div class="icontext">Connect backend</div>
-          </div>
-          <div class="action-btn-wrapper">
-              <button class="action-btn inline" id="play"><img width="30" src="./img/play.png"/></button>
-              <div class="icontext">Start visualization</div>
-          </div>
-          <div class="action-btn-spacer"></div>
-          <div class="action-btn-wrapper">
-              <button class="action-btn inline" id="pause"><img width="30" src="./img/snapshot.png"/></button>
-              <div class="icontext">Take a snapshot</div>
-          </div>
-          <div class="inline elapsed">Time elapsed: <span id="time-elapsed">00:00:00</span></div>
         </div>
         <div class="title">
           p2p Network Connectivity Graph
@@ -57,16 +44,60 @@
       </menu> 
       <div id="sidebar" class=sidebar>
         <div id="selected-node">
-          <div class="label">
-            Selected simulation: <div id="selected-simulation"></div>
+          <div class="controls">
+            <i id="power" class="fa fa-power-off" aria-hidden="true"></i>
+            <i id="play" class="fa fa-play-circle" aria-hidden="true"></i>
+            <i id="pause" class="fa fa-pause" aria-hidden="true"></i>
+            <div class="display">
+              <div class="elapsed">Time elapsed: <span id="time-elapsed">00:00:00</span></div>
+              <div class="label">
+                Selected simulation: <div id="selected-simulation"></div>
+              </div>
+            </div>
           </div>
           <div class="actions">
             <input id="timemachine" style="display:none" type="range">
           </div>
-          <div class="label">
-            <p onclick="showConnectionGraph()" class="link-action">Show connection graph </p>
+          <div class="control-options">
+            <div onclick="showConnectionGraph()" class="link-action">Show connection graph </div>
+            <input type="checkbox" class="link-action"/>Record message events
+            <i id="info-message-events" class="fa info-circle" aria-hidden="true"></i>
           </div>
-            <div class="counts">
+          <div class="two-counts counts">
+            <table>
+              <thead>
+                <td width="20%" class="node-counts"></td>
+                <td width="40%" class="count-type node-counts">Nodes</td>
+                <td width="40%" class="count-type conn-counts">Connections</td>
+              </thead>
+              <tbody>
+                <tr>
+                  <td class="count-labels">Up</td>
+                  <td id="nodes-up-count"    class="node-counts"></td>
+                  <td id="edges-up-count"    class="conn-counts"></td>
+                </tr>
+                <tr>
+                  <td class="count-labels">Added</td>
+                  <td id="nodes-add-count"    class="node-counts"></td>
+                  <td id="edges-add-count"    class="conn-counts"></td>
+                </tr>
+                <tr>
+                  <td class="count-labels">Removed</td>
+                  <td id="nodes-remove-count"    class="node-counts"></td>
+                  <td id="edges-remove-count"    class="conn-counts"></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="one-count counts msg-counts">
+            <div class="count-type">
+                Messages
+            </div>
+            <div id="messages-up-count">
+            </div>
+          </div>
+
+              <!--
               <h3>Nodes</h1>
               <table class="node-counts counts-table">
                 <thead>
@@ -80,8 +111,6 @@
                   <td id="nodes-remove-count"></td>
                 </tbody>
               </table>
-            </div>
-
             <div class="counts clear">
               <h3>Connections</h1>
               <table class="edge-counts counts-table">
@@ -97,6 +126,7 @@
                 </tbody>
               </table>
             </div>
+              -->
 
           <div class="node-bar">
             <div class="node-info">
@@ -131,6 +161,7 @@
     </div>
     <div id="connection-graph" class="ui-dialog">
        <svg id="chord-diagram"></svg>
+       <div class="action-div" onclick="toggleChord()" id="toggle-chord">Show message graph</div>
     </div>
     <div id="output-window">
       <label><input type="checkbox" checked="checked" id="showlogs" name="showlogs" value="true">Enable log console</label>
