foregrounding nodes over links; better button handling

--- a/d3-demo.html
+++ b/d3-demo.html
@@ -116,7 +116,8 @@
               <input type="hidden" id="target-id"/>
               <input type="hidden" id="full-node-id"/>
               <button type="button" class="nodeactions" onclick="killNode()">Stop this node</button>
-              <button type="button" class="nodeactions" onclick="connectTo()">Connect this node to peer:</button>
+              <button type="button" class="nodeactions" onclick="connectTo()">Connect this node to peer</button>
+              <button type="button" class="nodeactions" onclick="killLink()">Disconnect a link</button>
             </div>
             <pre id="node-kademlia-table" class="kademlia-info"></pre>              
           </div>
