--- a/d3-demo.html
+++ b/d3-demo.html
@@ -48,12 +48,13 @@
       </menu> 
       <div id="sidebar" class=sidebar>
         <div class="controls">
-          <i id="power" class="fa fa-power-off" aria-hidden="true"></i>
+          <i id="power" class="fa fa-power-off power-off" aria-hidden="true"></i>
+          <i id="play" class="invisible fa fa-play-circle" aria-hidden="true"></i>
           <!--
-          <i id="play" class="fa fa-play-circle" aria-hidden="true"></i>
-          -->
-          <i id="stop" class="invisible fa fa-stop" aria-hidden="true"></i>
           <i id="pause" class="invisible fa fa-pause" aria-hidden="true"></i>
+          <i id="stop" class="invisible fa fa-stop" aria-hidden="true"></i>
+          -->
+          <i id="freeze" class="invisible fa fa-snowflake-o" aria-hidden="true"></i>
           <div class="display">
             <div class="elapsed">Time elapsed: <span id="time-elapsed">00:00:00</span></div>
             <div class="label">
