--- a/d3-demo.html
+++ b/d3-demo.html
@@ -125,7 +125,7 @@
           <div class="node-bar">
             <h3>Node Information</h1>
             <div class="node-display">
-              ID: <span id="node-id"></span> 
+              ID: <span id="node-id"></span> <i id="healthy" class="fa fa-circle invisible" aria-hidden="true"></i>
               <br/>Index: <span id="node-index"></span> 
             </div>
             <div class="node-actions">
