--- a/d3-demo.html
+++ b/d3-demo.html
@@ -7,6 +7,7 @@
 
     <script src="js/lib/jquery-2.2.4.min.js"></script>
     <script src="js/lib/d3.v4.min.js"></script>    
+    <script src="js/clickhandlers.js"></script>
     <script src="js/timemachine.js"></script>
     <script src="js/visuals.js"></script>
     <script src="js/network.js"></script>
