node names + msgs

--- a/d3-demo.html
+++ b/d3-demo.html
@@ -121,13 +121,14 @@
             </tbody>
           </table>
         </div>
-        
+
         <div id="selected-node">
           <div class="node-bar">
             <h3>Node Information</h1>
             <div class="node-display">
               ID: <span id="node-id"></span> <i id="healthy" class="fa fa-circle invisible" aria-hidden="true"></i>
-              <br/>Index: <span id="node-index"></span> 
+              <br/>Index: <span id="node-index"></span>
+              <br/>Name: <span id="node-name"></span>
             </div>
             <div class="node-actions">
               <input type="hidden" id="target-id"/>
@@ -171,5 +172,3 @@
     </div>
   </body>
 </html>
-
-
